@@ -452,8 +452,8 @@ of tablature, as the second to tenth character.
 			  a 0 no longer indicates a space!
 	z		- a zero
 	\\		- one backslash in note position
-	. 		- one dot below tab
-	:		- two dots below tab
+	. 		- one dot below tab - fingering
+	:		- two horizontal dots below tab - fingering
 	|		- stroke - for thumb
                           two in a row give two side by side strokes 
 	-		- vertical bar - play similtaneously
@@ -463,11 +463,11 @@ of tablature, as the second to tenth character.
 			  # makes a hash sign
 			  x makes an x
 			  $ makes four small dots in a rectangle
-			  < makes a short horizontal lain - a dash
+			  < makes a short horizontal line - a dash
 		'	- a comma above the line
 		,	- a comma on the line
 		Q	- character is highlighted
-	%		- two dots (colon )preceeding next note
+	%		- two horizontal dots preceeding next note
 	?		- a flat
 	>		- something like a flat but different
 	@		- an asterix
@@ -475,6 +475,7 @@ of tablature, as the second to tenth character.
 	$ or &$		- double colon
 	_ or &_ 	- a smiley
 	&+ &* &# &' &`	- an ornament after preceeding note
+	&%		- two dots above the note
 	w, u		- "hold" for italian style tab
 	&x		- a postfix x
 	<		- two dots as an ornament
@@ -514,8 +515,8 @@ of tablature, as the second to tenth character.
 	//		- two slashes
  	///		- three slashes
 	<!tilde>	- the same as the ~ - looks like a sine wave
-	<!2mordent>     - a 2 lobed squiggle 
-	<!3mordent>     - a 3 lobed squiggle 
+	<!2mordent>     - a 2 lobed squiggle, baroque tab only
+	<!3mordent>     - a 3 lobed squiggle, baroque tab only
         1 3 4 5 6 7	- the number for bass string when you 
 			  run out of slashes
 	\1 \2 \3 \4	- left hand fingerings placed
