@@ -1,3 +1,6 @@
+VERSION "4.3.105
+A correction for < used as a dash ornament submitted by Paul Overell
+
 VERSION "4.3.104"
 change file name length to be greater than 120 chars
 
